...
    @EnvironmentObject var searchManager: LocationSearchManager

    var body: some View {
        NavigationView {
            VStack {
                HStack {
                    TextField("Location", text: $searchManager.inputValue)
                        .padding(10)
                        .background(Color(#colorLiteral(red: 1, green: 1, blue: 1, alpha: 0.02)))
                        .cornerRadius(10)
                    Button(action: handleCancel) {
                        Text("Cancel")
                    }
...
